complete Assigment with angular 14

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* Importing Bootstrap SCSS file. */
+@import 'bootstrap/scss/bootstrap';
+
+html,
+body {
+    margin: 0;
+    padding: 0;
+    background: rgb(22, 20, 34);
+}
+
+.popover {
+    --bs-popover-max-width: 600px !important;
+    border: 4px solid #ffc71f;
+    padding: 0;
+}
+
+.popover-body {
+    padding: 0 !important;
+    max-height: 80vh;
+}
