--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,3 +20,9 @@ body {
     padding: 0 !important;
     max-height: 80vh;
 }
+
+@media (max-width: 680px) {
+    .popover {
+        --bs-popover-max-width: 90vw !important;
+    }
+}
