--- a/src/app/components/chart/chart.component.scss
+++ b/src/app/components/chart/chart.component.scss
@@ -1,73 +1,95 @@
 .demo-chart {
-    height: 230px;
-    width: 400px;
-    border-radius: 14px;
-    border: 6px solid #100c29;
+  height: 200px;
+  // width: 160px;
+  border-radius: 14px;
+  border: 6px solid #06152b;
+  color: white;
+  background-color: #06152b;
+}
+
+.chart {
+  height: 200px;
+  width: calc((100rem / 6) - 70px);
 }
 
 .popover-chart {
-    height: 72px;
-    width: 390px;
-    min-width: auto;
-    border-radius: 14px;
-    border: 6px solid #d1d1d1;
-    margin-left: 20px;
+  height: 72px;
+  width: 390px;
+  min-width: auto;
+  border-radius: 14px;
+  border: 6px solid #d1d1d1;
+  margin-left: 20px;
 }
 
 .data-dot {
-    width: 8px;
-    height: 8px;
-    border-radius: 50%;
-    background: transparent;
-    position: absolute;
-    display: flex;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background: transparent;
+  position: absolute;
+  display: flex;
 }
 
 .header-number {
-    width: 40px;
-    background-color: #ffc71f;
-    padding-left: 10px;
+  width: 40px;
+  background-color: #ffc71f;
+  padding-left: 10px;
 }
 
 .header-text {
-    background: #ffe491;
-    padding: 6px 15px;
-    width: 100%;
+  background: #ffe491;
+  padding: 6px 15px;
+  width: 100%;
 }
 
 .avatar-circle {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background: rgb(255, 205, 205);
-    color: rgb(233, 52, 52);
-    text-align: center;
-    line-height: 40px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: rgb(255, 205, 205);
+  color: rgb(233, 52, 52);
+  text-align: center;
+  line-height: 40px;
 }
 
 .popover-body-container {
-    padding: 10px;
+  padding: 10px;
 }
 
 .instruction-container {
-    background-color: rgb(141, 196, 225);
-    color: rgb(30, 64, 255);
-    padding: 5px;
-    border-radius: 5px 5px 0 0;
-    font-weight: 600;
-    cursor: pointer;
+  background-color: rgb(141, 196, 225);
+  color: rgb(30, 64, 255);
+  padding: 5px;
+  border-radius: 5px 5px 0 0;
+  font-weight: 600;
+  cursor: pointer;
 }
 
 .instruction {
-    background-color: rgb(141, 196, 225);
-    padding: 5px;
-    border-radius: 0 5px 5px 5px;
-    font-weight: 600;
+  background-color: rgb(141, 196, 225);
+  padding: 5px;
+  border-radius: 0 5px 5px 5px;
+  font-weight: 600;
 }
 
 .view-instruction {
-    color: rgb(30, 64, 255);
-    font-weight: 600;
-    padding: 5px;
-    cursor: pointer;
+  color: rgb(30, 64, 255);
+  font-weight: 600;
+  padding: 5px;
+  cursor: pointer;
 }
+
+.chart-title {
+  text-align: left;
+  padding-left: 5px;
+  font-size: 11px;
+  font-weight: bold;
+  line-height: 1.45;
+}
+
+// @media (max-width: 260px) {
+//   .chart {
+//     height: 200px;
+//     min-width: auto;
+//   }
+// }
