--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,3 +1,163 @@
+<header id="header" class="site-header is-transparent">
+  <div class="container-fluid">
+    <div class="header-container">
+      <div class="d-flex gap-4">
+        <div class="icon">
+          <a>
+            <svg
+              width="30px"
+              height="14px"
+              viewBox="0 0 30 14"
+              version="1.1"
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+            >
+              <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                <g transform="translate(-50.000000, -33.000000)" fill="#111111">
+                  <g id="off-menu" transform="translate(50.000000, 28.000000)">
+                    <g id="icon-menu" transform="translate(0.000000, 5.000000)">
+                      <rect
+                        id="Rectangle-1"
+                        x="0"
+                        y="0"
+                        width="30"
+                        height="3"
+                        rx="1.5"
+                      ></rect>
+                      <rect
+                        id="Rectangle-2"
+                        x="0"
+                        y="11"
+                        width="20"
+                        height="3"
+                        rx="1.5"
+                      ></rect>
+                    </g>
+                  </g>
+                </g>
+              </g>
+            </svg>
+          </a>
+        </div>
+
+        <div class="logo">
+          <a href="/">
+            <img
+              src="../../../assets/images/logo-dark.png"
+              style="width: 200px"
+              alt="Client"
+            />
+          </a>
+        </div>
+      </div>
+
+      <div class="header-center">
+        <ul>
+          <li class="li-links">
+            <a href="/">Home</a>
+          </li>
+          <li class="li-links">
+            <a href="/Home#Industries">Industries</a>
+          </li>
+          <li class="li-links">
+            <a href="/Home#OurSolutions">Solutions</a>
+          </li>
+          <li class="li-links">
+            <a href="/Home#Plans">Plans</a>
+          </li>
+          <li class="li-links">
+            <a href="/ContactUs">Contact Us</a>
+          </li>
+          <li class="li-links">
+            <a href="/SystemDemo">System Demo</a>
+          </li>
+        </ul>
+      </div>
+      <div class="header-right">
+        Let's Talk
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="16"
+          height="16"
+          fill="white"
+          class="bi bi-arrow-right"
+          viewBox="0 0 16 16"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"
+          />
+        </svg>
+      </div>
+    </div>
+  </div>
+</header>
+
+<section class="top-row">
+  <div style="padding: 20px">
+    <div class="row">
+      <div class="col-lg-4">
+        <div class="CustomBox">
+          <p class="text-center">Complete System</p>
+          <div class="row">
+            <div class="col-lg-6">
+              <img
+                src="../../../assets/images/meter.png"
+                style="width: 150px; height: auto"
+              />
+            </div>
+            <div class="col-lg-6">
+              <div id="chartContainer0" echarts [options]="chartOption"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-8">
+        <div
+          class="CustomBox swiper-container d-flex align-items-center"
+          (mouseenter)="navShow = true"
+          (mouseleave)="navShow = false"
+        >
+          <swiper
+            [slidesPerView]="3"
+            [spaceBetween]="50"
+            [navigation]="navShow"
+          >
+            <ng-template swiperSlide>
+              <div class="d-flex flex-column justify-content-between">
+                <h4 class="c-w">55</h4>
+                <p>TSS</p>
+                <div class="swiper-content-btn">Chem Precipitation</div>
+              </div>
+            </ng-template>
+            <ng-template swiperSlide>
+              <div class="d-flex flex-column justify-content-between">
+                <h4 class="c-w">47</h4>
+                <p>COD Reduction</p>
+                <div class="swiper-content-btn">ASP</div>
+              </div>
+            </ng-template>
+            <ng-template swiperSlide>
+              <div class="d-flex flex-column justify-content-between">
+                <h4 class="c-w">1500</h4>
+                <p>MLSS</p>
+                <div class="swiper-content-btn">ASP</div>
+              </div>
+            </ng-template>
+            <ng-template swiperSlide>
+              <div class="d-flex flex-column justify-content-between">
+                <h4 class="c-w">700</h4>
+                <p>Bottom SV</p>
+                <div class="swiper-content-btn">Clarifier</div>
+              </div>
+            </ng-template>
+          </swiper>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 <div class="main">
   <ng-container *ngFor="let item of chartsData">
     <app-chart
@@ -6,6 +166,226 @@
       [subHeading]="item.subHeading"
       [popoverBodyData]="item.popoverBodyData"
       [popoverChartOption]="item.popoverChartOption"
+      [title]="item.title"
     ></app-chart>
   </ng-container>
 </div>
+
+<section class="section">
+  <div style="padding: 20px">
+    <div class="row">
+      <div class="col-lg-4">
+        <div class="alertTitle">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="white"
+            class="bi bi-exclamation-triangle"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M7.938 2.016A.13.13 0 0 1 8.002 2a.13.13 0 0 1 .063.016.15.15 0 0 1 .054.057l6.857 11.667c.036.06.035.124.002.183a.2.2 0 0 1-.054.06.1.1 0 0 1-.066.017H1.146a.1.1 0 0 1-.066-.017.2.2 0 0 1-.054-.06.18.18 0 0 1 .002-.183L7.884 2.073a.15.15 0 0 1 .054-.057m1.044-.45a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767z"
+            />
+            <path
+              d="M7.002 12a1 1 0 1 1 2 0 1 1 0 0 1-2 0M7.1 5.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0z"
+            /></svg
+          >PM Alerts
+        </div>
+        <div class="AlertsBox">
+          <table>
+            <thead>
+              <tr class="light-theme-bg">
+                <th class="light-theme-bg">Alert Name</th>
+                <th class="light-theme-bg">Suggested Action</th>
+                <th class="light-theme-bg">Alert Date</th>
+              </tr>
+            </thead>
+          </table>
+          <table class="AlertsBody">
+            <tbody>
+              <tr>
+                <td>PM for FEED PUMP (P16-A) DISCHARGE PI</td>
+                <td>
+                  1) Inspect seals, gaskets, and other connections for wear,
+                  damage, or leaks. Replace any components that show signs of
+                  deterioration.<br />
+                  2) Pressure Range Verification and Calibration of instrument
+                </td>
+                <td>2024-04-25 10:00:00</td>
+              </tr>
+              <tr>
+                <td>PM for FEED PUMP (P19-A) DISCHARGE PI</td>
+                <td>
+                  1) Inspect seals, gaskets, and other connections for wear,
+                  damage, or leaks. Replace any components that show signs of
+                  deterioration.<br />
+                  2) Pressure Range Verification and Calibration of instrument
+                </td>
+                <td>2024-04-10 10:00:00</td>
+              </tr>
+              <tr>
+                <td>PM for FEED PUMP (P21-A) DISCHARGE PI</td>
+                <td>
+                  1) Inspect seals, gaskets, and other connections for wear,
+                  damage, or leaks. Replace any components that show signs of
+                  deterioration.<br />
+                  2) Pressure Range Verification and Calibration of instrument
+                </td>
+                <td>2024-04-15 10:00:00</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+      <div class="col-lg-4">
+        <div class="alertTitle">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="white"
+            class="bi bi-exclamation-triangle"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M7.938 2.016A.13.13 0 0 1 8.002 2a.13.13 0 0 1 .063.016.15.15 0 0 1 .054.057l6.857 11.667c.036.06.035.124.002.183a.2.2 0 0 1-.054.06.1.1 0 0 1-.066.017H1.146a.1.1 0 0 1-.066-.017.2.2 0 0 1-.054-.06.18.18 0 0 1 .002-.183L7.884 2.073a.15.15 0 0 1 .054-.057m1.044-.45a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767z"
+            />
+            <path
+              d="M7.002 12a1 1 0 1 1 2 0 1 1 0 0 1-2 0M7.1 5.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0z"
+            /></svg
+          >Module Alerts
+        </div>
+        <div class="AlertsBox">
+          <table>
+            <thead>
+              <tr class="light-theme-bg">
+                <th class="light-theme-bg">Alert Name</th>
+                <th class="light-theme-bg">Suggested Action</th>
+                <th class="light-theme-bg">Alert Date</th>
+              </tr>
+            </thead>
+          </table>
+          <table class="AlertsBody">
+            <tbody>
+              <tr>
+                <td>ASP module is deteriorating</td>
+                <td>
+                  1. Optimize waste sludge withdrawal.<br />
+                  2. Increase influent flow rate.<br />
+                  3. Improve aeration efficiency.<br />
+                  4. Optimize F:M ratio<br />
+                  5. Enhance biomass retention in clarifier<br />
+                  6. Enhance return activated sludge (RAS) flow<br />
+                  7. Adjust solids retention time (SRT) to enhance MLSS
+                  concentration
+                </td>
+                <td>2024-03-28 13:05:00</td>
+              </tr>
+              <tr>
+                <td>Clarfier perfromance is detirorating</td>
+                <td>
+                  1. Increase hydraulic retention time.<br />
+                  2. Reduce recirculation rate<br />
+                  3. Check the Bottom SV of clarifier<br />
+                  4. Follow MLSS to MLVSS ratio<br />
+                  5. Monitor and adjust sludge removal rate
+                </td>
+                <td>2024-03-28 18:45:00</td>
+              </tr>
+              <tr>
+                <td>Chemical Precipitation Module TSS is deterioraing</td>
+                <td>
+                  1. Optimize coagulant/flocculant dosing.<br />
+                  2. Increase settling time or add a sedimentation step.<br />
+                  3. Enhance filtration efficiency.<br />
+                  4. Implement advanced treatment processes like membrane
+                  filtration.<br />
+                  5. Regularly monitor and adjust treatment parameters.<br />
+                  6. Investigate source of TSS and implement source control
+                  measures.
+                </td>
+                <td>2024-03-28 09:25:00</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+      <div class="col-lg-4">
+        <div class="alertTitle">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="white"
+            class="bi bi-exclamation-triangle"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M7.938 2.016A.13.13 0 0 1 8.002 2a.13.13 0 0 1 .063.016.15.15 0 0 1 .054.057l6.857 11.667c.036.06.035.124.002.183a.2.2 0 0 1-.054.06.1.1 0 0 1-.066.017H1.146a.1.1 0 0 1-.066-.017.2.2 0 0 1-.054-.06.18.18 0 0 1 .002-.183L7.884 2.073a.15.15 0 0 1 .054-.057m1.044-.45a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767z"
+            />
+            <path
+              d="M7.002 12a1 1 0 1 1 2 0 1 1 0 0 1-2 0M7.1 5.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0z"
+            /></svg
+          >Parameter Alerts
+        </div>
+        <div class="AlertsBox">
+          <table>
+            <thead>
+              <tr class="light-theme-bg">
+                <th class="light-theme-bg">Alert Name</th>
+                <th class="light-theme-bg">Suggested Action</th>
+                <th class="light-theme-bg">Alert Date</th>
+              </tr>
+            </thead>
+          </table>
+          <table class="AlertsBody">
+            <tbody>
+              <tr>
+                <td>
+                  ASP MLSS is high, sludge carryover is there in clarifier
+                </td>
+                <td>
+                  Adjust solids retention time (SRT) to enhance MLSS
+                  concentration
+                </td>
+                <td>2024-03-28 13:05:00</td>
+              </tr>
+              <tr>
+                <td>Cod redcution is lower than 60%</td>
+                <td>
+                  1. Increase hydraulic loading rate.<br />
+                  2. Adjust chemical dosing for optimal coagulation.<br />
+                  3. Optimize clarifier flocculation.<br />
+                  4. Minimize turbulence in clarifier<br />
+                  5. Increase detention time<br />
+                  6. Adjust sludge blanket depth<br />
+                  7. Monitor and adjust sludge withdrawal rate
+                </td>
+                <td>2024-03-28 18:45:00</td>
+              </tr>
+              <tr>
+                <td>Clarifier bottom SV is low</td>
+                <td>
+                  1. Monitor and adjust sludge recirculation<br />
+                  2. Increase MLSS<br />
+                  3. Increase DO level in biological process<br />
+                  4. Monitor and adjust the Recirculation.
+                </td>
+                <td>2024-03-28 09:25:00</td>
+              </tr>
+              <tr>
+                <td>High TSS in Chemical outlet</td>
+                <td>
+                  1. Adjust coagulant and flocculant dosing<br />
+                  2. Monitor and adjust inlet PH
+                </td>
+                <td>2024-03-28 09:25:00</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
