--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -1,7 +1,182 @@
 .main {
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+//header
+
+#header {
+  box-shadow: 0 5px 75px 2px rgba(64, 70, 74, 0.2) !important;
+}
+
+.site-header.is-transparent {
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 9;
+  background-color: transparent;
+  padding: 18px 0;
+}
+
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  margin: 0;
+  padding: 0;
+}
+
+.li-links {
+  a {
+    color: white;
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 16px;
+  }
+}
+
+.icon {
+  display: none;
+}
+
+.header-right {
+  background-image: linear-gradient(to right, #2050a0, #249ce0);
+  color: white;
+  font-size: 16px;
+  font-weight: 500;
+  padding: 10px 28px;
+  height: 46px;
+  border-radius: 20px;
+}
+
+@media (max-width: 980px) {
+  .header-center {
+    display: none;
+  }
+
+  .icon {
     display: flex;
-    gap: 16px;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        padding: 20px;
+    align-items: center;
+  }
+}
+
+//top row
+
+.CustomBox {
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  border-radius: 8px;
+  text-align: center;
+  height: 160px;
+  padding-top: 3px;
+  background-color: #06152b;
+  box-shadow: 0px 0px 5px 0px #000000;
+
+  p {
+    font-size: 12px;
+    color: #fff;
+    text-transform: capitalize;
+    font-weight: bold;
+    font-family: Lucida Grande, Lucida Sans Unicode, Arial, Helvetica,
+      sans-serif;
+  }
+}
+
+.swiper-container {
+  padding: 0 10px;
+}
+
+#chartContainer0 {
+  height: 120px;
+  padding-bottom: 20px;
+}
+
+//craousal
+
+.c-w {
+  color: white;
+}
+
+.swiper-content-btn {
+  border-radius: 20px;
+  background-color: #122744;
+  width: 100%;
+  font-size: 14px;
+  font-weight: 300;
+  padding: 6px 10px;
+  color: white;
+  line-height: 1;
+}
+
+//tables
+
+.alertTitle {
+  color: white;
+  padding-bottom: 6px;
+  font-weight: 600;
+}
+
+.AlertsBox {
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  border-radius: 8px;
+  text-align: center;
+  padding-top: 3px;
+  background-color: #06152b;
+  box-shadow: 0px 0px 5px 0px #000000;
+}
+
+.AlertsBox .light-theme-bg {
+  background-color: #06152b !important;
+  color: #fff !important;
+  font-family: Open Sans, Helvetica Neue, sans-serif;
+  font-size: 14px;
+  height: 80px;
+  text-transform: capitalize;
+  text-align: center;
+  vertical-align: middle;
+}
+
+.AlertsBox table thead > tr > th {
+  padding: 8px 12px;
+  border: 0;
+  font-weight: 700;
+  background-color: #06152b !important;
+}
+
+.AlertsBox .AlertsBody {
+  display: block;
+  max-height: 500px;
+  height: 100%;
+  overflow-y: scroll;
+}
+
+.AlertsBox table tbody > tr:nth-child(odd) {
+  background-color: #122744 !important;
+}
+
+tr {
+  text-align: left;
+  margin: 10px 0;
+  vertical-align: baseline;
+}
+
+table {
+  width: 100%;
+}
+
+td {
+  font-size: 14px;
+  padding: 5px 20px;
 }
