--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,7 +11,7 @@ body {
   margin: 0;
   padding: 0;
   background: #122234;
-  color: white;
+  // color: white;
   font-family: var(--bs-body-font-family);
   line-height: 21px;
 }
