change popover to modal

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -189,8 +189,9 @@
             />
             <path
               d="M7.002 12a1 1 0 1 1 2 0 1 1 0 0 1-2 0M7.1 5.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0z"
-            /></svg
-          >PM Alerts
+            />
+          </svg>
+          PM Alerts
         </div>
         <div class="AlertsBox">
           <table>
@@ -253,8 +254,9 @@
             />
             <path
               d="M7.002 12a1 1 0 1 1 2 0 1 1 0 0 1-2 0M7.1 5.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0z"
-            /></svg
-          >Module Alerts
+            />
+          </svg>
+          Module Alerts
         </div>
         <div class="AlertsBox">
           <table>
@@ -326,8 +328,9 @@
             />
             <path
               d="M7.002 12a1 1 0 1 1 2 0 1 1 0 0 1-2 0M7.1 5.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0z"
-            /></svg
-          >Parameter Alerts
+            />
+          </svg>
+          Parameter Alerts
         </div>
         <div class="AlertsBox">
           <table>
